--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Tauri + Sycamore App</title>
+    <title>Countdown Timer</title>
     <link data-trunk rel="css" href="styles.css" />
-    <link data-trunk rel="copy-dir" href="public" />
-  </head>
-  <body></body>
+    </head>
+  <body>
+    </body>
 </html>
