--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <link data-trunk rel="css" href="styles.css" />
     </head>
   <body>
+    <div data-tauri-drag-region></div>
     </body>
 </html>
